--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import 'tailwindcss';
 @tailwind base;       /* Normales CSS, Normalize, Resets */
 @tailwind components; /* @apply etc. für eigene Komponenten */
 @tailwind utilities;  /* Alle Utility-Klassen wie p-4, text-gray-900 */
